--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm install
+
       - name: Test
         run: npm run test
